3/20/11 Added Option.toString
3/17/11 Added a logger to ObservableProperty.trace and sample usage in main(), resolves #2779
3/16/11 Added ObservableProperty.trace, a debugging function that prints out the new value when it changes, along with the specified text
3/15/11 Fixed IfElse and ValueEquals boolean properties to notify new observer types, see #2775
3/10/11 Fixed boolean properties to notify new observer types
3/10/11 Moved exit functionality to PhetApplication to facilitate overrides for simsharing
3/7/11 #2775, Added listeners to Property<T> that receive the new value in the callback
3/7/11 #2731, Repackaged Function classes from util/ to util/function/
3/7/11 #2731, Moved Property<T> and related classes to a new package model.property
3/6/11 Changed red to color-blind friendly red in PhetColorScheme
3/4/11 Moved RichSimpleObserver to common from bending-light
3/3/11 Added docs for Option<T>
3/2/11 #123, made ModelViewTransform2D deprecated
2/28/11 #2758 migrate PolygonUtils from capacitor-lab to phetcommon
2/27/11 #2756, replaced validateTree() with validate()
2/23/11 #2753, moved color to PhetColorScheme
2/21/11 #2747, some recommended changes to ColorControl
2/21/11 #2746, open color chooser when clicking on label in ColorControl
2/19/11 Iterate on a copy of the observer list to avoid ConcurrentModificationException, see #2741
2/19/11 #2741 Removed unused method from SimpleObservable
2/17/11 #2741 Hygiene issues for SimpleObservable: converted to use generics, converted to foreach loop, removed unused field, cleaned up docs, reformatted code
2/16/11 #2739, add cleanup methods to Swing controls that observer Property<T>
2/15/11 Added Function1.Constant
2/10/11 add VoidFunction0.Null
2/8/2100 Generalized to parent types in BooleanProperty combinators and Or
2/7/2011 Added string "White Background" to string file
2/7/2011 Added a method to OptionsMenu that allows you to easily add a "White Background" menu item
1/31/2011 Added PropertyCheckBoxMenuItem