@@ -325,3 +325,6 @@ Games.title.gameOver=Game Over
 Games.title.gameSettings=Game Settings
 
 message.valueOutOfRange=Value must be between {0} and {1}.
+
+PiccoloPhet.VelocitySensorNode.speed=Speed
+PiccoloPhet.VelocitySensorNode.unknown=?
